hdparm-9.42
	- fix ordering of -S -y flags
	- spelling, typo, and formatting fixes for manpage and others
	- set block-count to 1 for Security commands sent via SAT (sgio)
	- use FIGETBSZ to determine filesystem block size for fibmap -- needed for FAT
	- fix master password revcode handling
	- try and fix reg_flags (again!) for old IDE taskfile ioctls
	- fixed '&&' bug in dco_identify code
	- force sector dumps (read-sector, identify, ..) to use le16 output format
hdparm-9.41
	- proper SCT identify info courtesy of Leonid Evdokimov <leon@darkk.net.ru>
	- updated raid1ext4trim.sh-1.5 script
hdparm-9.40
	- avoid HDIO_GETGEO_BIG when possible (doesn't exist in linux-2.6.xx and beyond)
	- pad secure erase timeouts by 30minutes rather than 5minutes.
hdparm-9.39
	- added -R flag to control Read-Write-Verify feature, courtesy of Gordan Bobic
	- nuked leftover sgio.c.orig file
hdparm-9.38
	- updated wiper.sh to allow all SCSI_DISK major numbers
	- updated handing for very long SECURITY-ERASE times
	- added -J flag for wdidle3 set/get
hdparm-9.37
	- handle raid1 start_lba values, and show -1 for indeterminte raid start_lba values
	- abort --fibmap when start_lba is indeterminate
	- updated wiper.sh to fix a kink with hfsplus filesystems
	- updated wiper.sh to no longer rely on the obsolete "rdev" command
hdparm-9.36
	- udpated raid1ext4trim.sh script to version 1.4
	- updated wiper.sh to support hfsplus and ntfs filesystem types, courtesy of Heiko Wegeler
	- updated wiper.sh with new flag to enable unattended operation, and handle SIGPIPE
	- updated manpage to indicate max sector range of 65335 for TRIM
hdparm-9.35
	- third go at fixing cdb issues, fixing -B flag.  Got it this time (finally).
hdparm-9.34
	- fix bad/missing cdb transfer length field for IDENTIFY and some other commands
hdparm-9.33
	- fix AHCI issues in sg16(): don't ask for sense_data on DATA-xfer commands
	- fix compiler warnings on old systems
	- fixed compilation on old systems lacking __be16
hdparm-9.32